<resources>
    <string name="app_name">BacaYuk</string>
    <string name="sample_text">Sample Text</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_katasandi">Masukan Katasandi</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="masukan_nama_lengkap">Masukan Nama Lengkap</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="masukan_ulang_kata_sandi">Masukan Ulang Kata Sandi</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama_lengkap_wajib_diisi">Nama lengkap wajib diisi</string>
    <string name="kami_akan_mengirimkan_tautan_untuk_mengatur_ulang_kata_sandi_anda">Kami akan mengirimkan tautan untuk mengatur ulang kata sandi Anda</string>
    <string name="kirim_tautan">Kirim Tautan</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_siswa">Pilih Siswa</string>
    <string name="loading">Loading</string>
    <string name="baca_huruf">Baca Huruf</string>
    <string name="baca_kata">Baca Kata</string>
    <string name="baca_kalimat">Baca Kalimat</string>
    <string name="a">A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="ini_huruf_kecil">Ini huruf kecil</string>
    <string name="ini_huruf_kapital">Ini huruf kapital/huruf besar</string>
    <string name="ini_perbedaan_huruf">Ini perbedaan huruf besar dan huruf kecil</string>
    <string name="ini_huruf_vokal">Ini huruf vokal</string>
    <string name="huruf">Huruf</string>
</resources>