<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/toolbar_action"
        layout="@layout/layout_toolbar_action" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp">

            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_180sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_24sdp"
                android:src="@drawable/ic_forgot_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_rounded_primary_50"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_info_24" />

                <TextView
                    style="@style/TextViewH12Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:text="@string/kami_akan_mengirimkan_tautan_untuk_mengatur_ulang_kata_sandi_anda"
                    android:textColor="@color/primary_500" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_capt_email"
                style="@style/TextViewH14Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/neutral_700" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                app:endIconMode="clear_text"
                android:textSize="@dimen/_14ssp"
                app:placeholderText="@string/masukan_email">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:background="@drawable/normal_state_edittext_outline"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_email_error"
                style="@style/TextViewH12Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red_error"
                android:visibility="gone" />
            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:background="@drawable/button_rounded_purple_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/_48sdp"
                android:textColor="@color/white"
                android:text="@string/kirim_tautan"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>